fix footer error layout shift

--- a/app/styles/components/Footer.module.scss
+++ b/app/styles/components/Footer.module.scss
@@ -37,8 +37,8 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    flex-basis: 60%;
-    width: 60%;
+    flex-basis: 100%;
+    width: 100%;
     max-width: 78em;
     margin: 0 auto;
     background-color: $secondary-color; 
