--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -25,7 +25,7 @@ body {
    background-color: $secondary-color;
    color: $primary-color;
    margin: 0 auto;
-   border: 2px solid $primary-color;
+  //  border: 2px solid $primary-color;
 }
 
 *, *::before, *::after {
